argo/networkpolicy-argo-argocd-dex-server.yaml
# Source: argo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argo
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.4.4
  name: argo-argocd-dex-server
  namespace: argo
  annotations:
    noa.re/deploy-id: 69c76c6a7861e127
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
          app.kubernetes.io/instance: argo
    ports:
    - port: http
      protocol: TCP
    - port: grpc
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
      app.kubernetes.io/instance: argo
  policyTypes:
  - Ingress
